--- a/requirements.txt
+++ b/requirements.txt
@@ -1,23 +1,78 @@
-# Network packet capture & analysis
+# NetGuard IDS Requirements
+# Core Python & System
+wheel==0.42.0
+
+# ========== Agent Module ==========
+# Packet capture and network analysis
 scapy==2.5.0
-pyshark==0.6.0
+psutil==5.9.5
 
-# Data processing
-pandas==1.5.3
-numpy==1.24.4
+# ========== Preprocessor Module ==========
+# Data processing and feature engineering
+pandas==2.0.3
+numpy==1.24.3
+scipy==1.10.1
+scikit-learn==1.3.0
+category-encoders==2.6.2
 
-# Machine Learning
-scikit-learn==1.3.2
-
-# Web dashboard
-flask==2.2.5
-sqlalchemy==2.0.31   # ORM để lưu dữ liệu nếu cần
-jinja2==3.1.3        # Template engine (Flask phụ thuộc)
-
-# Config & utilities
+# ========== Detector Module ==========
+# Machine Learning & Rule Engine
+joblib==1.3.2
 pyyaml==6.0.1
-requests==2.32.3
+xgboost==1.7.6          # Alternative ML algorithm
+tensorflow==2.13.0      # Optional for deep learning
 
-# (Optional) Security & logging
-python-dotenv==1.0.1  # Đọc .env
-loguru==0.7.2         # Logging dễ dùng
+# ========== Dashboard Module ==========
+# Web Framework & API
+flask==2.3.3
+flask-sqlalchemy==3.0.5
+flask-socketio==5.3.6
+flask-cors==4.0.0
+flask-jwt-extended==4.5.3
+flask-restx==1.1.0
+gunicorn==21.2.0
+
+# Database Drivers
+psycopg2-binary==2.9.7  # PostgreSQL
+
+# Frontend Assets (via CDN in templates)
+# - Bootstrap 5
+# - Chart.js
+# - jQuery
+
+# ========== Common Utilities ==========
+# Configuration & Security
+python-dotenv==1.0.0
+cryptography==41.0.3
+bcrypt==4.0.1
+
+# Observability
+prometheus-client==0.17.1
+structlog==23.1.0
+
+# Database Migrations
+alembic==1.12.0
+
+# ========== Development & Testing ==========
+# Testing Framework
+pytest==7.4.0
+pytest-cov==4.1.0
+pytest-mock==3.11.1
+pytest-asyncio==0.21.1
+
+# Code Quality
+black==23.7.0
+flake8==6.1.0
+mypy==1.5.1
+
+# Network Simulation
+tox==4.6.4              # For attack simulations
+
+# ========== Containerization ==========
+# Docker dependencies
+docker==6.1.3
+
+# Secrets Manager
+hvac==1.1.1
+boto3==1.28.0
+botocore==1.31.0
